# unified_diffusion

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile.api  README.md  custom-models.example.json  docker-compose.api.yml  package.json  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: ADDING_MODELS.md  API_QUICKREF.md  CIVITAI.md  LLM_INTEGRATION_GUIDE.md  MODELS.md  README.md  RELEASE_PROCESS.md  REPO_EVALUATION.md  UDIFF_QUICKREF.md
scripts/: smoke_api_docker.sh  smoke_api_local.sh
service/fastapi_app/: main.py  schemas.py
tests/: test_cache_layout.py  test_cli.py  test_diffusers_provider.py  test_fastapi_api.py  test_flux_provider.py  test_local_sources.py  test_logging.py  test_registry_resolution.py  test_settings.py  test_telemetry.py
unified_diffusion/: __init__.py  api.py  cli.py  defaults.py  errors.py  operations.py  settings.py  telemetry.py
unified_diffusion/cache/: __init__.py  manager.py
unified_diffusion/providers/: __init__.py  base.py  diffusers_provider.py  flux_provider.py
unified_diffusion/registry/: __init__.py  models.py
